# src/dashboard/apigateway/apigateway/biz/openapi/schemas/openapi_2.0_schema.json
@@ -423,6 +423,12 @@
                 },
                 "resourcePermissionRequired": {
                   "type": "boolean"
+                },
+                "oauth2PublicClientEnabled": {
+                  "type": "boolean"
+                },
+                "oauth2PersonalClientEnabled": {
+                  "type": "boolean"
                 }
               }
             },
