# src/dashboard/apigateway/apigateway/biz/resource_version/diff.py
@@ -100,6 +100,8 @@ class ResourceAuthConfig(BaseModel, DiffMixin):
     auth_verified_required: bool
     app_verified_required: bool
     resource_perm_required: bool
+    oauth2_public_client_enabled: bool = False
+    oauth2_personal_client_enabled: bool = False
 
 
 class ResourceAuth(BaseModel, DiffMixin):
